feat(sdds-themes): Update `sdds_finai` theme

--- a/packages/themes/sdds-themes/src/css/sdds_finai__dark.css
+++ b/packages/themes/sdds-themes/src/css/sdds_finai__dark.css
@@ -940,6 +940,54 @@
   --inverse-surface-skeleton-deep-gradient: linear-gradient(90deg, #0808085C 0%, #08080852 6.25%, #08080833 12.5%, #0808080A 25%, #08080833 37.5%, #08080852 43.75%, #0808085C 50%, #08080814 56.25%, #08080833 62.5%, #0808080A 75%, #08080833 87.5%, #08080852 93.75%, #0808085C 100%);
   --inverse-surface-skeleton-deep-gradient-hover: #FFFFFFFF;
   --inverse-surface-skeleton-deep-gradient-active: #FFFFFFFF;
+  --data-positive-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #1A9E32FF 0.302%, #00AC7BAD 30.285%, #007D8052 54.577%, #060A0C00 74.407%);
+  --data-positive-gradient-hover: #FFFFFF;
+  --data-positive-gradient-active: #FFFFFF;
+  --data-warning-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF7024FF 0%, #FF7024AD 30.401%, #85380C52 54.577%, #060A0C00 73.282%);
+  --data-warning-gradient-hover: #FFFFFF;
+  --data-warning-gradient-active: #FFFFFF;
+  --data-negative-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF293EFF 0%, #FF3D51AD 30.401%, #9C142252 54.577%, #060A0C00 73.282%);
+  --data-negative-gradient-hover: #FFFFFF;
+  --data-negative-gradient-active: #FFFFFF;
+  --data-info-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #118CDFFF 0%, #528EFFAD 30.401%, #0C72B652 54.577%, #060A0C00 73.282%);
+  --data-info-gradient-hover: #FFFFFF;
+  --data-info-gradient-active: #FFFFFF;
+  --on-dark-data-positive-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #1A9E32FF 0.302%, #00AC7BAD 30.285%, #007D8052 54.577%, #060A0C00 74.407%);
+  --on-dark-data-positive-gradient-hover: #FFFFFF;
+  --on-dark-data-positive-gradient-active: #FFFFFF;
+  --on-dark-data-warning-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF7024FF 0%, #FF7024AD 30.401%, #85380C52 54.577%, #060A0C00 73.282%);
+  --on-dark-data-warning-gradient-hover: #FFFFFF;
+  --on-dark-data-warning-gradient-active: #FFFFFF;
+  --on-dark-data-negative-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF293EFF 0%, #FF3D51AD 30.401%, #9C142252 54.577%, #060A0C00 73.282%);
+  --on-dark-data-negative-gradient-hover: #FFFFFF;
+  --on-dark-data-negative-gradient-active: #FFFFFF;
+  --on-dark-data-info-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #118CDFFF 0%, #528EFFAD 30.401%, #0C72B652 54.577%, #060A0C00 73.282%);
+  --on-dark-data-info-gradient-hover: #FFFFFF;
+  --on-dark-data-info-gradient-active: #FFFFFF;
+  --on-light-data-positive-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #1A9E32FF 0%, #00AC7BAD 30.401%, #EDF8FF52 54.577%, #FFFFFF00 73.282%);
+  --on-light-data-positive-gradient-hover: #FFFFFF;
+  --on-light-data-positive-gradient-active: #FFFFFF;
+  --on-light-data-warning-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FA5F05FF 0%, #FD9C68AD 30.401%, #FFF6E552 54.577%, #FFFFFF00 73.282%);
+  --on-light-data-warning-gradient-hover: #FFFFFF;
+  --on-light-data-warning-gradient-active: #FFFFFF;
+  --on-light-data-negative-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF293EFF 0%, #FF8F9AAD 30.401%, #FEE2D252 54.577%, #FFFFFF00 73.282%);
+  --on-light-data-negative-gradient-hover: #FFFFFF;
+  --on-light-data-negative-gradient-active: #FFFFFF;
+  --on-light-data-info-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #118CDFFF 0%, #52BAFFAD 30.401%, #CFECFF52 54.577%, #FFFFFF00 73.282%);
+  --on-light-data-info-gradient-hover: #FFFFFF;
+  --on-light-data-info-gradient-active: #FFFFFF;
+  --inverse-data-positive-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #1A9E32FF 0%, #00AC7BAD 30.401%, #EDF8FF52 54.577%, #FFFFFF00 73.282%);
+  --inverse-data-positive-gradient-hover: #FFFFFF;
+  --inverse-data-positive-gradient-active: #FFFFFF;
+  --inverse-data-warning-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FA5F05FF 0%, #FD9C68AD 30.401%, #FFF6E552 54.577%, #FFFFFF00 73.282%);
+  --inverse-data-warning-gradient-hover: #FFFFFF;
+  --inverse-data-warning-gradient-active: #FFFFFF;
+  --inverse-data-negative-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF293EFF 0%, #FF8F9AAD 30.401%, #FEE2D252 54.577%, #FFFFFF00 73.282%);
+  --inverse-data-negative-gradient-hover: #FFFFFF;
+  --inverse-data-negative-gradient-active: #FFFFFF;
+  --inverse-data-info-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #118CDFFF 0%, #52BAFFAD 30.401%, #CFECFF52 54.577%, #FFFFFF00 73.282%);
+  --inverse-data-info-gradient-hover: #FFFFFF;
+  --inverse-data-info-gradient-active: #FFFFFF;
 }
 
 :root {
