--- a/packages/themes/sdds-themes/src/css/sdds_finai__dark.css
+++ b/packages/themes/sdds-themes/src/css/sdds_finai__dark.css
@@ -1089,6 +1089,12 @@
   --plasma-typo-h5-bold-font-family: var(--plasma-typo-header-font-family);
   --plasma-typo-h5-bold-letter-spacing: normal;
   --plasma-typo-h5-bold-font-style: normal;
+  --plasma-typo-h6-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-letter-spacing: normal;
+  --plasma-typo-h6-font-style: normal;
+  --plasma-typo-h6-bold-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-bold-letter-spacing: normal;
+  --plasma-typo-h6-bold-font-style: normal;
   --plasma-typo-body-l-font-family: var(--plasma-typo-body-font-family);
   --plasma-typo-body-l-letter-spacing: -0.02em;
   --plasma-typo-body-l-font-style: normal;
@@ -1167,6 +1173,9 @@
   --plasma-typo-h5-medium-font-family: var(--plasma-typo-header-font-family);
   --plasma-typo-h5-medium-letter-spacing: normal;
   --plasma-typo-h5-medium-font-style: normal;
+  --plasma-typo-h6-medium-font-family: var(--plasma-typo-header-font-family);
+  --plasma-typo-h6-medium-letter-spacing: normal;
+  --plasma-typo-h6-medium-font-style: normal;
   --plasma-typo-body-l-medium-font-family: var(--plasma-typo-body-font-family);
   --plasma-typo-body-l-medium-letter-spacing: -0.02em;
   --plasma-typo-body-l-medium-font-style: normal;
@@ -1246,6 +1255,12 @@
     --plasma-typo-h5-bold-font-size: 1rem;
     --plasma-typo-h5-bold-font-weight: 600;
     --plasma-typo-h5-bold-line-height: 1.375rem;
+    --plasma-typo-h6-font-size: 0.625rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 0.875rem;
+    --plasma-typo-h6-bold-font-size: 0.625rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 0.875rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -1324,6 +1339,9 @@
     --plasma-typo-h5-medium-font-size: 1rem;
     --plasma-typo-h5-medium-font-weight: 500;
     --plasma-typo-h5-medium-line-height: 1.375rem;
+    --plasma-typo-h6-medium-font-size: 0.625rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 0.875rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
@@ -1404,6 +1422,12 @@
     --plasma-typo-h5-bold-font-size: 1rem;
     --plasma-typo-h5-bold-font-weight: 600;
     --plasma-typo-h5-bold-line-height: 1.375rem;
+    --plasma-typo-h6-font-size: 0.625rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 0.875rem;
+    --plasma-typo-h6-bold-font-size: 0.625rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 0.875rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -1482,6 +1506,9 @@
     --plasma-typo-h5-medium-font-size: 1rem;
     --plasma-typo-h5-medium-font-weight: 500;
     --plasma-typo-h5-medium-line-height: 1.375rem;
+    --plasma-typo-h6-medium-font-size: 0.625rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 0.875rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
@@ -1562,6 +1589,12 @@
     --plasma-typo-h5-bold-font-size: 1.125rem;
     --plasma-typo-h5-bold-font-weight: 600;
     --plasma-typo-h5-bold-line-height: 1.5rem;
+    --plasma-typo-h6-font-size: 0.75rem;
+    --plasma-typo-h6-font-weight: 400;
+    --plasma-typo-h6-line-height: 1rem;
+    --plasma-typo-h6-bold-font-size: 0.75rem;
+    --plasma-typo-h6-bold-font-weight: 600;
+    --plasma-typo-h6-bold-line-height: 1rem;
     --plasma-typo-body-l-font-size: 1.125rem;
     --plasma-typo-body-l-font-weight: 400;
     --plasma-typo-body-l-line-height: 1.375rem;
@@ -1640,6 +1673,9 @@
     --plasma-typo-h5-medium-font-size: 1.125rem;
     --plasma-typo-h5-medium-font-weight: 500;
     --plasma-typo-h5-medium-line-height: 1.5rem;
+    --plasma-typo-h6-medium-font-size: 0.75rem;
+    --plasma-typo-h6-medium-font-weight: 500;
+    --plasma-typo-h6-medium-line-height: 1rem;
     --plasma-typo-body-l-medium-font-size: 1.125rem;
     --plasma-typo-body-l-medium-font-weight: 500;
     --plasma-typo-body-l-medium-line-height: 1.375rem;
