feat(sdds-themes): Update `sdds_finai` and `sdds_bcp` themes

--- a/packages/themes/sdds-themes/src/css/sdds_finai__dark.css
+++ b/packages/themes/sdds-themes/src/css/sdds_finai__dark.css
@@ -743,14 +743,14 @@
   --inverse-outline-warning: #FA5F05;
   --inverse-outline-negative: #E31227;
   --inverse-outline-solid-tertiary: #657179;
-  --data-yellow-hover: #F4B22FFF;
-  --data-yellow-active: #EDA20CFF;
-  --data-yellow-minor-hover: #B87A00FF;
-  --data-yellow-minor-active: #996600FF;
+  --data-yellow-hover: #B87A00FF;
+  --data-yellow-active: #996600FF;
+  --data-yellow-minor-hover: #5D3F04FF;
+  --data-yellow-minor-active: #402B03FF;
   --data-yellow-transparent-hover: #F3A812AD;
   --data-yellow-transparent-active: #F3A81280;
-  --data-yellow-light-hover: #FFF4E0FF;
-  --data-yellow-light-active: #FFF3DBFF;
+  --data-yellow-light-hover: #2A1E09FF;
+  --data-yellow-light-active: #191205FF;
   --data-sky-blue-light-hover: #E0F8FFFF;
   --data-sky-blue-light-active: #DBF7FFFF;
   --data-green: #1A9E32;
@@ -785,15 +785,71 @@
   --data-yellow-transparent: #F3A9128F;
   --data-green-transparent: #1A9E323D;
   --data-blue-transparent: #118CDF3D;
-  --on-dark-data-yellow-hover: #F4B22FFF;
-  --on-dark-data-yellow-active: #EDA20CFF;
-  --on-dark-data-yellow-minor-hover: #B87A00FF;
-  --on-dark-data-yellow-minor-active: #996600FF;
+  --data-green-hover: #1DAF37FF;
+  --data-green-active: #18952FFF;
+  --data-blue-light-hover: #0C1F2CFF;
+  --data-blue-light-active: #08141CFF;
+  --data-orchid-hover: #BA5FF7FF;
+  --data-orchid-active: #A938F5FF;
+  --data-orchid-minor-hover: #7D2FB1FF;
+  --data-orchid-minor-active: #6C2999FF;
+  --data-orange-hover: #FB7223FF;
+  --data-orange-active: #F05B05FF;
+  --data-orange-minor-hover: #95400EFF;
+  --data-orange-minor-active: #79340BFF;
+  --data-orange-light-hover: #4F250DFF;
+  --data-orange-light-active: #351909FF;
+  --data-red-hover: #ED1D31FF;
+  --data-red-active: #D91226FF;
+  --data-red-minor-hover: #B01726FF;
+  --data-red-minor-active: #951320FF;
+  --data-red-light-hover: #5B1018FF;
+  --data-red-light-active: #410B11FF;
+  --data-arctic-hover: #1C8D6DFF;
+  --data-arctic-active: #177359FF;
+  --data-green-minor-hover: #0F9928FF;
+  --data-green-minor-active: #0C7D21FF;
+  --data-green-light-hover: #0D541AFF;
+  --data-green-light-active: #093912FF;
+  --data-spring-hover: #0F9928FF;
+  --data-spring-active: #0C7D21FF;
+  --data-blue-hover: #1798EEFF;
+  --data-blue-active: #1086D5FF;
+  --data-blue-mild-hover: #0D7EC9FF;
+  --data-blue-mild-active: #0B6CADFF;
+  --data-blue-minor-hover: #0F466BFF;
+  --data-blue-minor-active: #0B3550FF;
+  --data-malachite-hover: #009194FF;
+  --data-malachite-active: #007375FF;
+  --data-malachite-minor-hover: #0F696CFF;
+  --data-malachite-minor-active: #0B4E51FF;
+  --data-electric-blue-hover: #1852BFFF;
+  --data-electric-blue-active: #1446A3FF;
+  --data-fuchsia-hover: #9C2688FF;
+  --data-fuchsia-active: #832073FF;
+  --data-pink-hover: #AF0E4EFF;
+  --data-pink-active: #920C42FF;
+  --data-gray-hover: #7B878EFF;
+  --data-gray-active: #6C777FFF;
+  --data-gray-minor-hover: #394147FF;
+  --data-gray-minor-active: #2B3136FF;
+  --data-red-transparent-hover: #FF293E5C;
+  --data-red-transparent-active: #FF293E2E;
+  --data-orange-transparent-hover: #FA5F055C;
+  --data-orange-transparent-active: #FA5F052E;
+  --data-green-transparent-hover: #1A9E325C;
+  --data-green-transparent-active: #1A9E322E;
+  --data-blue-transparent-hover: #118CDF5C;
+  --data-blue-transparent-active: #118CDF2E;
+  --on-dark-data-yellow-hover: #B87A00FF;
+  --on-dark-data-yellow-active: #996600FF;
+  --on-dark-data-yellow-minor-hover: #5D3F04FF;
+  --on-dark-data-yellow-minor-active: #402B03FF;
   --on-dark-data-yellow-transparent: #F3A9128F;
   --on-dark-data-yellow-transparent-hover: #F3A812AD;
   --on-dark-data-yellow-transparent-active: #F3A81280;
-  --on-dark-data-yellow-light-hover: #FFF4E0FF;
-  --on-dark-data-yellow-light-active: #FFF3DBFF;
+  --on-dark-data-yellow-light-hover: #2A1E09FF;
+  --on-dark-data-yellow-light-active: #191205FF;
   --on-dark-data-sky-blue-light-hover: #E0F8FFFF;
   --on-dark-data-sky-blue-light-active: #DBF7FFFF;
   --on-dark-data-blue-minor: #0D3B59;
@@ -827,15 +883,71 @@
   --on-dark-data-orange-transparent: #FA5F053D;
   --on-dark-data-green-transparent: #1A9E323D;
   --on-dark-data-blue-transparent: #118CDF3D;
+  --on-dark-data-blue-minor-hover: #0F466BFF;
+  --on-dark-data-blue-minor-active: #0B3550FF;
+  --on-dark-data-orchid-minor-hover: #7D2FB1FF;
+  --on-dark-data-orchid-minor-active: #6C2999FF;
+  --on-dark-data-red-minor-hover: #B01726FF;
+  --on-dark-data-red-minor-active: #951320FF;
+  --on-dark-data-red-light-hover: #5B1018FF;
+  --on-dark-data-red-light-active: #410B11FF;
+  --on-dark-data-green-hover: #1DAF37FF;
+  --on-dark-data-green-active: #18952FFF;
+  --on-dark-data-green-minor-hover: #0F9928FF;
+  --on-dark-data-green-minor-active: #0C7D21FF;
+  --on-dark-data-green-light-hover: #0D541AFF;
+  --on-dark-data-green-light-active: #093912FF;
+  --on-dark-data-spring-hover: #62900EFF;
+  --on-dark-data-spring-active: #4F740BFF;
+  --on-dark-data-blue-hover: #1798EEFF;
+  --on-dark-data-blue-active: #1086D5FF;
+  --on-dark-data-blue-mild-hover: #0D7EC9FF;
+  --on-dark-data-blue-mild-active: #0B6CADFF;
+  --on-dark-data-malachite-hover: #009194FF;
+  --on-dark-data-malachite-active: #007375FF;
+  --on-dark-data-malachite-minor-hover: #0F696CFF;
+  --on-dark-data-malachite-minor-active: #0B4E51FF;
+  --on-dark-data-electric-blue-hover: #1852BFFF;
+  --on-dark-data-electric-blue-active: #1446A3FF;
+  --on-dark-data-fuchsia-hover: #9C2688FF;
+  --on-dark-data-fuchsia-active: #832073FF;
+  --on-dark-data-pink-hover: #AF0E4EFF;
+  --on-dark-data-pink-active: #920C42FF;
+  --on-dark-data-gray-hover: #7B878EFF;
+  --on-dark-data-gray-active: #6C777FFF;
+  --on-dark-data-gray-minor-hover: #394147FF;
+  --on-dark-data-gray-minor-active: #2B3136FF;
+  --on-dark-data-blue-light-hover: #0C1F2CFF;
+  --on-dark-data-blue-light-active: #08141CFF;
+  --on-dark-data-orchid-hover: #BA5FF7FF;
+  --on-dark-data-orchid-active: #A938F5FF;
+  --on-dark-data-orange-hover: #FB7223FF;
+  --on-dark-data-orange-active: #F05B05FF;
+  --on-dark-data-orange-minor-hover: #95400EFF;
+  --on-dark-data-orange-minor-active: #79340BFF;
+  --on-dark-data-orange-light-hover: #4F250DFF;
+  --on-dark-data-orange-light-active: #351909FF;
+  --on-dark-data-red-hover: #ED1D31FF;
+  --on-dark-data-red-active: #D91226FF;
+  --on-dark-data-arctic-hover: #1C8D6DFF;
+  --on-dark-data-arctic-active: #177359FF;
+  --on-dark-data-red-transparent-hover: #FF293E5C;
+  --on-dark-data-red-transparent-active: #FF293E2E;
+  --on-dark-data-orange-transparent-hover: #FA5F055C;
+  --on-dark-data-orange-transparent-active: #FA5F052E;
+  --on-dark-data-green-transparent-hover: #1A9E325C;
+  --on-dark-data-green-transparent-active: #1A9E322E;
+  --on-dark-data-blue-transparent-hover: #118CDF5C;
+  --on-dark-data-blue-transparent-active: #118CDF2E;
   --on-light-data-yellow: #F3A912;
-  --on-light-data-yellow-hover: #F4B22FFF;
-  --on-light-data-yellow-active: #EDA20CFF;
+  --on-light-data-yellow-hover: #F5B638FF;
+  --on-light-data-yellow-active: #E49C0CFF;
   --on-light-data-yellow-minor: #FFD37A;
-  --on-light-data-yellow-minor-hover: #FFDA8FFF;
-  --on-light-data-yellow-minor-active: #FFCF70FF;
+  --on-light-data-yellow-minor-hover: #FFCF70FF;
+  --on-light-data-yellow-minor-active: #FFCC66FF;
   --on-light-data-yellow-transparent: #F3A9128F;
-  --on-light-data-yellow-transparent-hover: #F3A812AD;
-  --on-light-data-yellow-transparent-active: #F3A81280;
+  --on-light-data-yellow-transparent-hover: #F3A8129E;
+  --on-light-data-yellow-transparent-active: #F3A812A3;
   --on-light-data-yellow-light-hover: #FFF4E0FF;
   --on-light-data-yellow-light-active: #FFF3DBFF;
   --on-light-data-sky-blue-light-hover: #E0F8FFFF;
@@ -869,14 +981,70 @@
   --on-light-data-orange-transparent: #FA5F0533;
   --on-light-data-yellow-light: #FFF6E5;
   --on-light-data-green-light: #9EFAAF;
+  --on-light-data-blue-light-hover: #E5F5FFFF;
+  --on-light-data-blue-light-active: #E0F3FFFF;
+  --on-light-data-blue-minor-hover: #C7E9FFFF;
+  --on-light-data-blue-minor-active: #C2E7FFFF;
+  --on-light-data-orchid-hover: #C061FFFF;
+  --on-light-data-orchid-active: #BC57FFFF;
+  --on-light-data-orchid-minor-hover: #DAACF6FF;
+  --on-light-data-orchid-minor-active: #D6A3F5FF;
+  --on-light-data-arctic-hover: #16DFA6FF;
+  --on-light-data-arctic-active: #12BA8AFF;
+  --on-light-data-green-hover: #1EB83AFF;
+  --on-light-data-green-active: #178C2CFF;
+  --on-light-data-green-minor-hover: #36D954FF;
+  --on-light-data-green-minor-active: #25C141FF;
+  --on-light-data-spring-hover: #A1F406FF;
+  --on-light-data-spring-active: #86CC05FF;
+  --on-light-data-orange-hover: #FB782DFF;
+  --on-light-data-orange-active: #E65705FF;
+  --on-light-data-orange-minor-hover: #FD965EFF;
+  --on-light-data-orange-minor-active: #FC8F54FF;
+  --on-light-data-orange-light-hover: #FEDCC8FF;
+  --on-light-data-orange-light-active: #FED9C3FF;
+  --on-light-data-red-hover: #FF5263FF;
+  --on-light-data-red-active: #FF142CFF;
+  --on-light-data-red-minor-hover: #FF8591FF;
+  --on-light-data-red-minor-active: #FF7A88FF;
+  --on-light-data-red-light-hover: #FFD6DAFF;
+  --on-light-data-red-light-active: #FFD1D6FF;
+  --on-light-data-blue-hover: #209CEEFF;
+  --on-light-data-blue-active: #0F81CCFF;
+  --on-light-data-blue-mild-hover: #7ACAFFFF;
+  --on-light-data-blue-mild-active: #3DB1FFFF;
+  --on-light-data-malachite-hover: #04D8DCFF;
+  --on-light-data-malachite-active: #04B1B4FF;
+  --on-light-data-malachite-minor-hover: #00F1F5FF;
+  --on-light-data-malachite-minor-active: #00C9CCFF;
+  --on-light-data-electric-blue-hover: #7ACAFFFF;
+  --on-light-data-electric-blue-active: #3DB1FFFF;
+  --on-light-data-fuchsia-hover: #F288E0FF;
+  --on-light-data-fuchsia-active: #F17EDEFF;
+  --on-light-data-pink-hover: #FF85B6FF;
+  --on-light-data-pink-active: #FF7AAFFF;
+  --on-light-data-gray-hover: #9BA5ABFF;
+  --on-light-data-gray-active: #7F8B94FF;
+  --on-light-data-gray-minor-hover: #CFDAE2FF;
+  --on-light-data-gray-minor-active: #C9D5DEFF;
+  --on-light-data-red-transparent-hover: #FF293E42;
+  --on-light-data-red-transparent-active: #FF293E47;
+  --on-light-data-blue-transparent-hover: #118CDF42;
+  --on-light-data-blue-transparent-active: #118CDF47;
+  --on-light-data-green-transparent-hover: #1A9E3242;
+  --on-light-data-green-transparent-active: #1A9E3247;
+  --on-light-data-orange-transparent-hover: #FA5F0542;
+  --on-light-data-orange-transparent-active: #FA5F0547;
+  --on-light-data-green-light-hover: #94F9A7FF;
+  --on-light-data-green-light-active: #8BF99FFF;
   --inverse-data-yellow: #F3A912;
-  --inverse-data-yellow-hover: #F4B22FFF;
-  --inverse-data-yellow-active: #EDA20CFF;
+  --inverse-data-yellow-hover: #F5B638FF;
+  --inverse-data-yellow-active: #E49C0CFF;
   --inverse-data-yellow-minor: #FFD37A;
-  --inverse-data-yellow-minor-hover: #FFDA8FFF;
-  --inverse-data-yellow-minor-active: #FFCF70FF;
-  --inverse-data-yellow-transparent-hover: #F3A812AD;
-  --inverse-data-yellow-transparent-active: #F3A81280;
+  --inverse-data-yellow-minor-hover: #FFCF70FF;
+  --inverse-data-yellow-minor-active: #FFCC66FF;
+  --inverse-data-yellow-transparent-hover: #F3A8129E;
+  --inverse-data-yellow-transparent-active: #F3A812A3;
   --inverse-data-yellow-light: #FFF6E5;
   --inverse-data-yellow-light-hover: #FFF4E0FF;
   --inverse-data-yellow-light-active: #FFF3DBFF;
@@ -911,6 +1079,60 @@
   --inverse-data-blue-transparent: #118CDF33;
   --inverse-data-red-transparent: #FF293E33;
   --inverse-data-yellow-transparent: #F3A9128F;
+  --inverse-data-blue-minor-hover: #114C74FF;
+  --inverse-data-blue-minor-active: #0A2F47FF;
+  --inverse-data-orchid-hover: #BE69F7FF;
+  --inverse-data-orchid-active: #A52FF4FF;
+  --inverse-data-orchid-minor-hover: #7D2FB1FF;
+  --inverse-data-orchid-minor-active: #662791FF;
+  --inverse-data-orange-hover: #FB782DFF;
+  --inverse-data-orange-active: #E65705FF;
+  --inverse-data-orange-minor-hover: #95400EFF;
+  --inverse-data-orange-minor-active: #70300AFF;
+  --inverse-data-orange-light-hover: #58290EFF;
+  --inverse-data-orange-light-active: #2C1507FF;
+  --inverse-data-red-hover: #ED1D31FF;
+  --inverse-data-red-active: #D01124FF;
+  --inverse-data-red-minor-hover: #B91828FF;
+  --inverse-data-red-minor-active: #8C121EFF;
+  --inverse-data-red-light-hover: #64121AFF;
+  --inverse-data-red-light-active: #380A0FFF;
+  --inverse-data-arctic-hover: #1C8D6DFF;
+  --inverse-data-arctic-active: #156A52FF;
+  --inverse-data-green-hover: #1EB83AFF;
+  --inverse-data-green-active: #178C2CFF;
+  --inverse-data-green-minor-hover: #0F9928FF;
+  --inverse-data-green-minor-active: #0B741FFF;
+  --inverse-data-green-light-hover: #0E5D1DFF;
+  --inverse-data-green-light-active: #08310FFF;
+  --inverse-data-spring-hover: #62900EFF;
+  --inverse-data-spring-active: #496B0BFF;
+  --inverse-data-blue-hover: #209CEEFF;
+  --inverse-data-blue-active: #0F81CCFF;
+  --inverse-data-blue-mild-hover: #0D84D3FF;
+  --inverse-data-blue-mild-active: #0A66A3FF;
+  --inverse-data-malachite-hover: #009194FF;
+  --inverse-data-malachite-active: #00696BFF;
+  --inverse-data-malachite-minor-hover: #107175FF;
+  --inverse-data-malachite-minor-active: #0A4648FF;
+  --inverse-data-electric-blue-hover: #1956C8FF;
+  --inverse-data-electric-blue-active: #13429AFF;
+  --inverse-data-fuchsia-hover: #9C2688FF;
+  --inverse-data-fuchsia-active: #7B1E6CFF;
+  --inverse-data-pink-hover: #AF0E4EFF;
+  --inverse-data-pink-active: #890B3DFF;
+  --inverse-data-gray-hover: #869198FF;
+  --inverse-data-gray-active: #677279FF;
+  --inverse-data-gray-minor-hover: #394147FF;
+  --inverse-data-gray-minor-active: #272C30FF;
+  --inverse-data-orange-transparent-hover: #FA5F0542;
+  --inverse-data-orange-transparent-active: #FA5F0547;
+  --inverse-data-green-transparent-hover: #1A9E3242;
+  --inverse-data-green-transparent-active: #1A9E3247;
+  --inverse-data-blue-transparent-hover: #118CDF42;
+  --inverse-data-blue-transparent-active: #118CDF47;
+  --inverse-data-red-transparent-hover: #FF293E42;
+  --inverse-data-red-transparent-active: #FF293E47;
   color: var(--text-primary);
   background-color: var(--background-primary);
 }
@@ -941,53 +1163,53 @@
   --inverse-surface-skeleton-deep-gradient-hover: #FFFFFFFF;
   --inverse-surface-skeleton-deep-gradient-active: #FFFFFFFF;
   --data-positive-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #1A9E32FF 0.302%, #00AC7BAD 30.285%, #007D8052 54.577%, #060A0C00 74.407%);
-  --data-positive-gradient-hover: #FFFFFF;
-  --data-positive-gradient-active: #FFFFFF;
+  --data-positive-gradient-hover: #FFFFFFFF;
+  --data-positive-gradient-active: #FFFFFFFF;
   --data-warning-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF7024FF 0%, #FF7024AD 30.401%, #85380C52 54.577%, #060A0C00 73.282%);
-  --data-warning-gradient-hover: #FFFFFF;
-  --data-warning-gradient-active: #FFFFFF;
+  --data-warning-gradient-hover: #FFFFFFFF;
+  --data-warning-gradient-active: #FFFFFFFF;
   --data-negative-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF293EFF 0%, #FF3D51AD 30.401%, #9C142252 54.577%, #060A0C00 73.282%);
-  --data-negative-gradient-hover: #FFFFFF;
-  --data-negative-gradient-active: #FFFFFF;
+  --data-negative-gradient-hover: #FFFFFFFF;
+  --data-negative-gradient-active: #FFFFFFFF;
   --data-info-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #118CDFFF 0%, #528EFFAD 30.401%, #0C72B652 54.577%, #060A0C00 73.282%);
-  --data-info-gradient-hover: #FFFFFF;
-  --data-info-gradient-active: #FFFFFF;
+  --data-info-gradient-hover: #FFFFFFFF;
+  --data-info-gradient-active: #FFFFFFFF;
   --on-dark-data-positive-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #1A9E32FF 0.302%, #00AC7BAD 30.285%, #007D8052 54.577%, #060A0C00 74.407%);
-  --on-dark-data-positive-gradient-hover: #FFFFFF;
-  --on-dark-data-positive-gradient-active: #FFFFFF;
+  --on-dark-data-positive-gradient-hover: #FFFFFFFF;
+  --on-dark-data-positive-gradient-active: #FFFFFFFF;
   --on-dark-data-warning-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF7024FF 0%, #FF7024AD 30.401%, #85380C52 54.577%, #060A0C00 73.282%);
-  --on-dark-data-warning-gradient-hover: #FFFFFF;
-  --on-dark-data-warning-gradient-active: #FFFFFF;
+  --on-dark-data-warning-gradient-hover: #FFFFFFFF;
+  --on-dark-data-warning-gradient-active: #FFFFFFFF;
   --on-dark-data-negative-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF293EFF 0%, #FF3D51AD 30.401%, #9C142252 54.577%, #060A0C00 73.282%);
-  --on-dark-data-negative-gradient-hover: #FFFFFF;
-  --on-dark-data-negative-gradient-active: #FFFFFF;
+  --on-dark-data-negative-gradient-hover: #FFFFFFFF;
+  --on-dark-data-negative-gradient-active: #FFFFFFFF;
   --on-dark-data-info-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #118CDFFF 0%, #528EFFAD 30.401%, #0C72B652 54.577%, #060A0C00 73.282%);
-  --on-dark-data-info-gradient-hover: #FFFFFF;
-  --on-dark-data-info-gradient-active: #FFFFFF;
+  --on-dark-data-info-gradient-hover: #FFFFFFFF;
+  --on-dark-data-info-gradient-active: #FFFFFFFF;
   --on-light-data-positive-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #1A9E32FF 0%, #00AC7BAD 30.401%, #EDF8FF52 54.577%, #FFFFFF00 73.282%);
-  --on-light-data-positive-gradient-hover: #FFFFFF;
-  --on-light-data-positive-gradient-active: #FFFFFF;
+  --on-light-data-positive-gradient-hover: #FFFFFFFF;
+  --on-light-data-positive-gradient-active: #FFFFFFFF;
   --on-light-data-warning-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FA5F05FF 0%, #FD9C68AD 30.401%, #FFF6E552 54.577%, #FFFFFF00 73.282%);
-  --on-light-data-warning-gradient-hover: #FFFFFF;
-  --on-light-data-warning-gradient-active: #FFFFFF;
+  --on-light-data-warning-gradient-hover: #FFFFFFFF;
+  --on-light-data-warning-gradient-active: #FFFFFFFF;
   --on-light-data-negative-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF293EFF 0%, #FF8F9AAD 30.401%, #FEE2D252 54.577%, #FFFFFF00 73.282%);
-  --on-light-data-negative-gradient-hover: #FFFFFF;
-  --on-light-data-negative-gradient-active: #FFFFFF;
+  --on-light-data-negative-gradient-hover: #FFFFFFFF;
+  --on-light-data-negative-gradient-active: #FFFFFFFF;
   --on-light-data-info-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #118CDFFF 0%, #52BAFFAD 30.401%, #CFECFF52 54.577%, #FFFFFF00 73.282%);
-  --on-light-data-info-gradient-hover: #FFFFFF;
-  --on-light-data-info-gradient-active: #FFFFFF;
+  --on-light-data-info-gradient-hover: #FFFFFFFF;
+  --on-light-data-info-gradient-active: #FFFFFFFF;
   --inverse-data-positive-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #1A9E32FF 0%, #00AC7BAD 30.401%, #EDF8FF52 54.577%, #FFFFFF00 73.282%);
-  --inverse-data-positive-gradient-hover: #FFFFFF;
-  --inverse-data-positive-gradient-active: #FFFFFF;
+  --inverse-data-positive-gradient-hover: #FFFFFFFF;
+  --inverse-data-positive-gradient-active: #FFFFFFFF;
   --inverse-data-warning-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FA5F05FF 0%, #FD9C68AD 30.401%, #FFF6E552 54.577%, #FFFFFF00 73.282%);
-  --inverse-data-warning-gradient-hover: #FFFFFF;
-  --inverse-data-warning-gradient-active: #FFFFFF;
+  --inverse-data-warning-gradient-hover: #FFFFFFFF;
+  --inverse-data-warning-gradient-active: #FFFFFFFF;
   --inverse-data-negative-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #FF293EFF 0%, #FF8F9AAD 30.401%, #FEE2D252 54.577%, #FFFFFF00 73.282%);
-  --inverse-data-negative-gradient-hover: #FFFFFF;
-  --inverse-data-negative-gradient-active: #FFFFFF;
+  --inverse-data-negative-gradient-hover: #FFFFFFFF;
+  --inverse-data-negative-gradient-active: #FFFFFFFF;
   --inverse-data-info-gradient: radial-gradient(74.00% 74.00% at 50% 50%, #118CDFFF 0%, #52BAFFAD 30.401%, #CFECFF52 54.577%, #FFFFFF00 73.282%);
-  --inverse-data-info-gradient-hover: #FFFFFF;
-  --inverse-data-info-gradient-active: #FFFFFF;
+  --inverse-data-info-gradient-hover: #FFFFFFFF;
+  --inverse-data-info-gradient-active: #FFFFFFFF;
 }
 
 :root {
