--- a/packages/themes/plasma-themes/src/css/plasma_web_ACTUAL_TYPOGRAPHY.module.css
+++ b/packages/themes/plasma-themes/src/css/plasma_web_ACTUAL_TYPOGRAPHY.module.css
@@ -580,6 +580,9 @@
   --outline-solid-default: #F9F9F9;
   --outline-solid-default-hover: #C7C7C7FF;
   --outline-solid-default-active: #E0E0E0FF;
+  --outline-read-only: #FFFFFF1F;
+  --outline-read-only-hover: #FFFFFF4D;
+  --outline-read-only-active: #FFFFFF12;
   --on-dark-outline-solid-primary-hover: #303030FF;
   --on-dark-outline-solid-primary-active: #212121FF;
   --on-dark-outline-solid-secondary-hover: #595959FF;
@@ -648,6 +651,9 @@
   --on-dark-outline-solid-default: #F9F9F9;
   --on-dark-outline-solid-default-hover: #C7C7C7FF;
   --on-dark-outline-solid-default-active: #E0E0E0FF;
+  --on-dark-outline-read-only: #FFFFFF1F;
+  --on-dark-outline-read-only-hover: #FFFFFF4D;
+  --on-dark-outline-read-only-active: #FFFFFF12;
   --on-light-outline-solid-primary-hover: #E8E8E8FF;
   --on-light-outline-solid-primary-active: #D9D9D9FF;
   --on-light-outline-solid-secondary-hover: #9E9E9EFF;
@@ -716,6 +722,9 @@
   --on-light-outline-solid-default: #080808;
   --on-light-outline-solid-default-hover: #FFFFFFFF;
   --on-light-outline-solid-default-active: #C7C7C7FF;
+  --on-light-outline-read-only: #0808081A;
+  --on-light-outline-read-only-hover: #0808084D;
+  --on-light-outline-read-only-active: #08080833;
   --inverse-outline-solid-primary-hover: #ABABABFF;
   --inverse-outline-solid-primary-active: #C4C4C4FF;
   --inverse-outline-solid-secondary-hover: #FFFFFFFF;
@@ -787,6 +796,9 @@
   --inverse-outline-solid-default: #080808;
   --inverse-outline-solid-default-hover: #FFFFFFFF;
   --inverse-outline-solid-default-active: #C7C7C7FF;
+  --inverse-outline-read-only: #0808081A;
+  --inverse-outline-read-only-hover: #0808084D;
+  --inverse-outline-read-only-active: #08080833;
   --data-yellow: #F3A912;
   --data-yellow-hover: #F4B22FFF;
   --data-yellow-active: #EDA20CFF;
@@ -1458,6 +1470,9 @@
   --outline-solid-default: #F9F9F9;
   --outline-solid-default-hover: #FFFFFFFF;
   --outline-solid-default-active: #C7C7C7FF;
+  --outline-read-only: #0808081A;
+  --outline-read-only-hover: #0808084D;
+  --outline-read-only-active: #08080833;
   --on-dark-outline-solid-primary-hover: #3B3B3BFF;
   --on-dark-outline-solid-primary-active: #1C1C1CFF;
   --on-dark-outline-solid-secondary-hover: #636363FF;
@@ -1526,6 +1541,9 @@
   --on-dark-outline-solid-default: #F9F9F9;
   --on-dark-outline-solid-default-hover: #FFFFFFFF;
   --on-dark-outline-solid-default-active: #C7C7C7FF;
+  --on-dark-outline-read-only: #FFFFFF1F;
+  --on-dark-outline-read-only-hover: #FFFFFF4D;
+  --on-dark-outline-read-only-active: #FFFFFF12;
   --on-light-outline-solid-primary-hover: #EDEDEDFF;
   --on-light-outline-solid-primary-active: #D4D4D4FF;
   --on-light-outline-solid-secondary-hover: #A3A3A3FF;
@@ -1594,6 +1612,9 @@
   --on-light-outline-solid-default: #080808;
   --on-light-outline-solid-default-hover: #595959FF;
   --on-light-outline-solid-default-active: #303030FF;
+  --on-light-outline-read-only: #0808081A;
+  --on-light-outline-read-only-hover: #0808084D;
+  --on-light-outline-read-only-active: #08080833;
   --inverse-outline-solid-primary-hover: #787878FF;
   --inverse-outline-solid-primary-active: #4F4F4FFF;
   --inverse-outline-solid-secondary-hover: #FFFFFFFF;
@@ -1665,6 +1686,9 @@
   --inverse-outline-solid-default: #080808;
   --inverse-outline-solid-default-hover: #595959FF;
   --inverse-outline-solid-default-active: #303030FF;
+  --inverse-outline-read-only: #FFFFFF1F;
+  --inverse-outline-read-only-hover: #FFFFFF4D;
+  --inverse-outline-read-only-active: #FFFFFF12;
   --data-yellow: #F3A912;
   --data-yellow-hover: #F5B638FF;
   --data-yellow-active: #E49C0CFF;
